--- a/.gitignore
+++ b/.gitignore
@@ -161,4 +161,345 @@ jspm_packages/
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
-.pnp.* 
+.pnp.*
+
+# =============================================================================
+# BACKEND SPECIFIC IGNORES
+# =============================================================================
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# poetry
+poetry.lock
+
+# pdm
+.pdm.toml
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# =============================================================================
+# DATABASE FILES
+# =============================================================================
+
+# PostgreSQL
+*.sql
+*.sqlite
+*.sqlite3
+*.db
+
+# Database dumps
+*.dump
+*.backup
+
+# =============================================================================
+# DOCKER FILES
+# =============================================================================
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+docker-compose.override.yaml
+
+# =============================================================================
+# DEVELOPMENT & TESTING
+# =============================================================================
+
+# Test files
+test_*.py
+*_test.py
+tests/
+test/
+
+# Mock and simulator files
+mock_*.py
+*_mock.py
+*_simulator.py
+simulator/
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+.atom/
+.brackets.json
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# =============================================================================
+# PROJECT SPECIFIC
+# =============================================================================
+
+# QRIS Simulator
+qris-simulator/
+simulator/
+
+# Backend specific
+backend/.env
+backend/logs/
+backend/temp/
+backend/uploads/
+backend/data/
+
+# React Native specific
+*.apk
+*.aab
+*.ipa
+android/app/build/
+ios/build/
+
+# Expo specific
+.expo/
+.expo-shared/
+
+# =============================================================================
+# SECURITY & SENSITIVE FILES
+# =============================================================================
+
+# API Keys and secrets
+*.key
+*.pem
+*.p12
+*.pfx
+secrets.json
+config.json
+credentials.json
+
+# SSL certificates
+*.crt
+*.csr
+*.pem
+*.key
+
+# =============================================================================
+# LOGS & DEBUGGING
+# =============================================================================
+
+# Log files
+*.log
+logs/
+debug.log
+error.log
+access.log
+
+# Debug files
+*.debug
+debug/
+
+# =============================================================================
+# CACHE & TEMPORARY FILES
+# =============================================================================
+
+# Cache directories
+.cache/
+cache/
+tmp/
+temp/
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+*.old
+
+# =============================================================================
+# BUILD & DISTRIBUTION
+# =============================================================================
+
+# Build outputs
+build/
+dist/
+out/
+target/
+
+# Compiled files
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# =============================================================================
+# MONITORING & ANALYTICS
+# =============================================================================
+
+# Monitoring files
+*.monitor
+monitoring/
+
+# Analytics
+analytics/
+*.analytics
+
+# =============================================================================
+# BACKUP & ARCHIVE
+# =============================================================================
+
+# Backup files
+*.backup
+*.bak
+*.old
+*.orig
+
+# Archive files
+*.zip
+*.tar
+*.tar.gz
+*.rar
+*.7z
+
+# =============================================================================
+# MISCELLANEOUS
+# =============================================================================
+
+# System files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Network
+.netrc
+
+# Local configuration
+local_config.py
+local_settings.py 
