--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - SECRET_KEY=your-secret-key-change-in-production
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
-      - QRIS_API_BASE_URL=https://qris.interactive.co.id/restapi/qris
+      - QRIS_API_BASE_URL=http://localhost:7000/restapi/qris
     volumes:
       - .:/app
     depends_on:
