--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.1",
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "axios": "^1.11.0",
     "expo": "~50.0.0",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
